kubernetes-manifests/05-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: academa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: bykowskiolaf/academa-backend:latest
          ports:
            - name: backend
              containerPort: 8080
