kubernetes-manifests/06-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: academa
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
