kubernetes-manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: academa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: bykowskiolaf/academa-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: academa
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
