kubernetes-manifests/07-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: academa-ingress
  namespace: academa
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - academa.bykowski.dev
  rules:
    - host: academa.bykowski.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
